# sh8601-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: ws_143in_tch_amoled.rs  ws_18in_amoled_fps.rs
src/: graphics_core.rs  lib.rs
src/displays/: mod.rs  waveshare_143_tch_amoled.rs  waveshare_18_amoled.rs
